Changes from jTDS 1.0.3
=======================

06/02/2005 - Alin Sinpalean
 o Applied Mike's fix for bug #1212905 PreparedStatement.setFloat issue.

06/01/2005 - Alin Sinpalean
 o Initial implementation for extended scrollability/updatability support
   (TYPE_SCROLL_SENSITIVE for keyset cursors, TYPE_SCROLL_SENSITIVE + 1 for
   dynamic cursors, CONCUR_UPDATABLE for optimistic concurrency w/ timestamps,
   CONCUR_UPDATABLE + 1 for pessimistic concurrency and  CONCUR_UPDATABLE + 2
   for optimistic concurrency w/ value checking). All the new values work with
   Sybase too, but the behavior is the same as the default.

05/30/2005 - Alin Sinpalean
 o Changed the default prepareSQL mode from 1 (temporary stored procedures) to
   3 (sp_prepare) for SQL Server. For Sybase, the default is still 1.
 o Corrected a bug in DateTime that was causing -1 to be stored as the time
   component of a DATETIME field for a Date value.
 o Applied Mike's patch [1210936] Change byte array to string conversions; the
   patch changes the way byte[] to String conversions are made (now hex values
   are returned) and also a bug with SELECT DISTINCT not working with Sybase.
 o Added information about the useCursors property (and fast forward-only
   cursors to the FAQ).
 o Made the maximum global buffer memory and minimum local buffer packets
   configurable from the connection properties by adding two new properties:
   bufferMaxMemory and bufferMinPackets.

05/27/2005 - Alin Sinpalean
 o Added initial support for fast forward-only cursors.
 o Corrected yet another cancel synchronization issue caused by the end of
   response flag not being reset when a cancel packet was sent.
 o Corrected an issue causing hidden columns to "become visible" in result set
   meta data obtained from prepared statements.
 o Corrected bug [1209039] jTDS can deadlock when used with C3P0 connection
   pooling; unnecessary synchronization on statements caused deadlocks.

05/25/2005 - Alin Sinpalean