@@ -54,7 +54,7 @@ import java.util.LinkedList;
  * @see java.sql.ResultSet
  *
  * @author Mike Hutchinson
- * @version $Id: JtdsStatement.java,v 1.45 2005-06-01 17:24:14 alin_sinpalean Exp $
+ * @version $Id: JtdsStatement.java,v 1.46 2005-06-02 16:10:34 alin_sinpalean Exp $
  */
 public class JtdsStatement implements java.sql.Statement {
     /*
@@ -291,27 +291,25 @@ public class JtdsStatement implements java.sql.Statement {
     }
 
     /**
-     * Execute SQL to obtain a result set.
+     * Executes SQL to obtain a result set.
      *
-     * @param sql The SQL statement to execute.
-     * @param spName Optional stored procedure name.
-     * @param params Optional parameters.
-     * @return The result set as a <code>ResultSet</code>.
-     * @throws SQLException
+     * @param sql       the SQL statement to execute
+     * @param spName    optional stored procedure name
+     * @param params    optional parameters
+     * @param useCursor whether a cursor should be created for the SQL
+     * @return the result set generated by the query
      */
     protected ResultSet executeSQLQuery(String sql,
                                         String spName,
-                                        ParamInfo[] params)
+                                        ParamInfo[] params,
+                                        boolean useCursor)
             throws SQLException {
         String warningMessage = null;
 
         //
         // Try to open a cursor result set if required
         //
-        if (resultSetType != ResultSet.TYPE_FORWARD_ONLY
-            || resultSetConcurrency != ResultSet.CONCUR_READ_ONLY
-            || connection.getUseCursors()
-            || cursorName != null) {
+        if (useCursor) {
             try {
                 if (connection.getServerType() == Driver.SQLSERVER) {
                     currentResult =
@@ -388,20 +386,24 @@ public class JtdsStatement implements java.sql.Statement {
     }
 
     /**
-     * Execute any type of SQL.
+     * Executes any type of SQL.
      *
-     * @param sql The SQL statement to execute.
-     * @param spName Optional stored procedure name.
-     * @param params Optional parameters.
-     * @return <code>boolean</code> true if a result set is returned by the statement.
+     * @param sql        the SQL statement to execute
+     * @param spName     optional stored procedure name
+     * @param params     optional parameters
+     * @param returnKeys whether the statement returns generated keys
+     * @param update     whether the caller is {@link #executeUpdate}
+     * @param useCursor  whether the requested result set type or concurrency
+     *                   or connection properties request usage of a cursor
+     * @return <code>true</code> if the first result is a result set
      * @throws SQLException if an error condition occurs
      */
     protected boolean executeSQL(String sql,
                                  String spName,
-                                 String sqlWord,
                                  ParamInfo[] params,
                                  boolean returnKeys,
-                                 boolean update)
+                                 boolean update,
+                                 boolean useCursor)
             throws SQLException {
         String warningMessage = null;
 
@@ -409,13 +411,7 @@ public class JtdsStatement implements java.sql.Statement {
         // For SQL Server, try to open a cursor result set if required
         // (and possible).
         //
-        if (connection.getServerType() == Driver.SQLSERVER
-            && (resultSetType != ResultSet.TYPE_FORWARD_ONLY
-                || resultSetConcurrency != ResultSet.CONCUR_READ_ONLY
-                || connection.getUseCursors()
-                || cursorName != null)
-            && !returnKeys
-            && (sqlWord.equals("select") || sqlWord.startsWith("exec"))) {
+        if (connection.getServerType() == Driver.SQLSERVER && !update && useCursor) {
             try {
                 currentResult = new MSCursorResultSet(this, sql, spName,
                         params, resultSetType, resultSetConcurrency);
@@ -540,6 +536,105 @@ public class JtdsStatement implements java.sql.Statement {
         genKeyResultSet = null;
         tds.clearResponseQueue();
         closeAllResultSets();
+    }
+
+    /**
+     * Implements the common functionality for plain statement {@link #execute}
+     * and {#link #executeUpdate}: basic checks, cleaning up of previous
+     * results, setting up and executing the query and loading the first
+     * results.
+     *
+     * @param sql    an SQL <code>INSERT</code>, <code>UPDATE</code> or
+     *               <code>DELETE</code> statement or an SQL statement that
+     *               returns nothing, such as an SQL DDL statement
+     * @param autoGeneratedKeys a flag indicating whether auto-generated keys
+     *               should be made available for retrieval
+     * @param update boolean flag indicating whether the caller is
+     *               {@link #executeUpdate} -- in this case an exception is
+     *               thrown if the first result is not an update count and no
+     *               cursor is created (direct execution)
+     * @return <code>true</code> if the first result is a
+     *         <code>ResultSet</code>, <code>false</code> if it's an update
+     *         count
+     * @see #execute
+     * @see #executeUpdate
+     */
+    private boolean executeImpl(String sql, int autoGeneratedKeys, boolean update)
+            throws SQLException {
+        checkOpen();
+        initialize();
+
+        if (sql == null || sql.length() == 0) {
+            throw new SQLException(Messages.get("error.generic.nosql"), "HY000");
+        }
+
+        boolean returnKeys;
+        String sqlWord = "";
+        if (escapeProcessing) {
+            String tmp[] = SQLParser.parse(sql, null, connection, false);
+
+            if (tmp[1].length() != 0) {
+                throw new SQLException(
+                        Messages.get("error.statement.badsql"), "07000");
+            }
+
+            sql = tmp[0];
+            sqlWord = tmp[2];
+        } else {
+            // Escape processing turned off so
+            // see if we can extract "insert" from start of statement
+            sql = sql.trim();
+            if (sql.length() > 5) {
+                sqlWord = sql.substring(0,6).toLowerCase();
+            }
+        }
+
+        if (autoGeneratedKeys == RETURN_GENERATED_KEYS) {
+            returnKeys = sqlWord.equals("insert");
+        } else if (autoGeneratedKeys == NO_GENERATED_KEYS) {
+            returnKeys = false;
+        } else {
+            throw new SQLException(
+                    Messages.get("error.generic.badoption",
+                            Integer.toString(autoGeneratedKeys),
+                            "autoGeneratedKeys"),
+                    "HY092");
+        }
+
+        if (returnKeys) {
+            if (connection.getServerType() == Driver.SQLSERVER
+                    && connection.getDatabaseMajorVersion() >= 8) {
+                sql += " SELECT SCOPE_IDENTITY() AS ID";
+            } else {
+                sql += " SELECT @@IDENTITY AS ID";
+            }
+        }
+
+        return executeSQL(sql, null, null, returnKeys, update,
+                !update && useCursor(returnKeys, sqlWord));
+    }
+
+    /**
+     * Determines whether a cursor should be used based on the requested result
+     * set type and concurrency, whether a cursor name has been set, the
+     * <code>useCursors</code> connection property has been set, the first
+     * word in the SQL query is either SELECT or EXEC/EXECUTE and no generated
+     * keys are returned.
+     *
+     * @param returnKeys indicates whether keys will be returned by the query
+     * @param sqlWord    the first word in the SQL query; can be
+     *                   <code>null</code> if the caller is
+     *                   {@link #executeQuery}
+     * @return <code>true</code> if a cursor should be used, <code>false</code>
+     *         if not
+     */
+    protected boolean useCursor(boolean returnKeys, String sqlWord) {
+        return (resultSetType != ResultSet.TYPE_FORWARD_ONLY
+                    || resultSetConcurrency != ResultSet.CONCUR_READ_ONLY
+                    || connection.getUseCursors()
+                    || cursorName != null)
+                && !returnKeys
+                && (sqlWord == null || sqlWord.equals("select") || sqlWord.startsWith("exec"));
     }
 
 // ------------------ java.sql.Statement methods ----------------------
@@ -741,42 +836,7 @@ public class JtdsStatement implements java.sql.Statement {
             clearBatch();
         }
     }
-/*
-    public int[] executeBatch() throws SQLException {
-        checkOpen();
 
-        if (batchValues == null || batchValues.size() == 0) {
-            return new int[0];
-        }
-
-        int size = batchValues.size();
-        int[] updateCounts = new int[size];
-        int i = 0;
-
-        try {
-            for (; i < size; i++) {
-                Object value = batchValues.get(i);
-
-                if (value instanceof String) {
-                    updateCounts[i] = executeUpdate((String) value);
-                } else {
-                    updateCounts[i] = executeBatchOther(value);
-                }
-            }
-        } catch (SQLException e) {
-            int[] tmpUpdateCounts = new int[i + 1];
-
-            System.arraycopy(updateCounts, 0, tmpUpdateCounts, 0, i + 1);
-
-            tmpUpdateCounts[i] = EXECUTE_FAILED;
-            throw new BatchUpdateException(e.getMessage(), tmpUpdateCounts);
-        } finally {
-            clearBatch();
-        }
-
-        return updateCounts;
-    }
-*/
     public void setFetchDirection(int direction) throws SQLException {
         checkOpen();
         switch (direction) {
@@ -948,67 +1008,18 @@ public class JtdsStatement implements java.sql.Statement {
     }
 
     public boolean execute(String sql) throws SQLException {
-        return execute(sql, NO_GENERATED_KEYS);
+        return executeImpl(sql, NO_GENERATED_KEYS, false);
     }
 
     public int executeUpdate(String sql, int autoGeneratedKeys) throws SQLException {
-        execute(sql, autoGeneratedKeys);
+        executeImpl(sql, autoGeneratedKeys, true);
 
         int res = getUpdateCount();
         return res == -1 ? 0 : res;
     }
 
     public boolean execute(String sql, int autoGeneratedKeys) throws SQLException {
-        checkOpen();
-        initialize();
-
-        if (sql == null || sql.length() == 0) {
-            throw new SQLException(Messages.get("error.generic.nosql"), "HY000");
-        }
-
-        boolean returnKeys;
-        String sqlWord = "";
-        if (escapeProcessing) {
-            String tmp[] = SQLParser.parse(sql, null, connection, false);
-
-            if (tmp[1].length() != 0) {
-                throw new SQLException(
-                    Messages.get("error.statement.badsql"), "07000");
-            }
-
-            sql = tmp[0];
-            sqlWord = tmp[2];
-        } else {
-            // Escape processing turned off so
-            // see if we can extract "insert" from start of statement
-            sql = sql.trim();
-            if (sql.length() > 5) {
-                sqlWord = sql.substring(0,6).toLowerCase();
-            }
-        }
-
-        if (autoGeneratedKeys == RETURN_GENERATED_KEYS) {
-            returnKeys = sqlWord.equals("insert");
-        } else if (autoGeneratedKeys == NO_GENERATED_KEYS) {
-            returnKeys = false;
-        } else {
-            throw new SQLException(
-                    Messages.get("error.generic.badoption",
-                            Integer.toString(autoGeneratedKeys),
-                            "autoGeneratedKeys"),
-                    "HY092");
-        }
-
-        if (returnKeys) {
-            if (connection.getServerType() == Driver.SQLSERVER
-                && connection.getDatabaseMajorVersion() >= 8) {
-                sql += " SELECT SCOPE_IDENTITY() AS ID";
-            } else {
-                sql += " SELECT @@IDENTITY AS ID";
-            }
-        }
-
-        return executeSQL(sql, null, sqlWord, null, returnKeys, false);
+        return executeImpl(sql, autoGeneratedKeys, false);
     }
 
     public int executeUpdate(String sql, int[] columnIndexes) throws SQLException {
@@ -1036,7 +1047,7 @@ public class JtdsStatement implements java.sql.Statement {
                 Messages.get("error.generic.needcolindex", "execute"),"HY092");
         }
 
-        return execute(sql, RETURN_GENERATED_KEYS);
+        return executeImpl(sql, RETURN_GENERATED_KEYS, false);
     }
 
     public Connection getConnection() throws SQLException {
@@ -1114,7 +1125,7 @@ public class JtdsStatement implements java.sql.Statement {
                 Messages.get("error.generic.needcolname", "execute"),"HY092");
         }
 
-        return execute(sql, RETURN_GENERATED_KEYS);
+        return executeImpl(sql, RETURN_GENERATED_KEYS, false);
     }
 
     public ResultSet executeQuery(String sql) throws SQLException {
@@ -1135,6 +1146,6 @@ public class JtdsStatement implements java.sql.Statement {
             sql = tmp[0];
         }
 
-        return this.executeSQLQuery(sql, null, null);
+        return this.executeSQLQuery(sql, null, null, useCursor(false, null));
     }
 }
